增加knock-out drum,，为未来做准备

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="type-selector">
                 <button id="verticalBtn" class="type-btn active">制冷立式</button>
                 <button id="horizontalBtn" class="type-btn">制冷卧式</button>
+                <button id="knockoutBtn" class="type-btn" disabled title="正在编制中">制冷满液气分 (正在编制中)</button>
                 <button id="steamBtn" class="type-btn">水蒸汽立式</button>
             </div>
         </section>
@@ -433,6 +434,8 @@
                 </section>
             </main>
         </div>
+
+        <!-- 制冷满液气分内容 - 正在编制中 -->
 
         <!-- 水蒸汽立式内容 -->
         <div id="steamContent" class="separator-content" style="display: none;">
