--- a/index.html
+++ b/index.html
@@ -314,6 +314,12 @@
                         <small class="hint">推荐范围: 1.0 - 5.0 (默认 3.0，即 vh = 3 × vt)</small>
                     </div>
 
+                    <div class="form-group">
+                        <label for="circulationRatio">循环倍数（液体质量流量倍数）</label>
+                        <input type="number" id="circulationRatio" class="input-field" value="10" step="0.1" min="1" max="10000">
+                        <small class="hint">范围: 1% - 10000% (默认 10%，普通应用: 5%-50%，虹吸循环气分: 100%-5000%+)</small>
+                    </div>
+
                     <button id="calculateBtnH" class="calculate-btn">计算</button>
                 </section>
 
